[gd_scene load_steps=4 format=3 uid="uid://d3g07ric82rh7"]

[ext_resource type="Script" path="res://scenes/UI/Stations/Ascend/AscendUI.gd" id="1_krtpo"]
[ext_resource type="Texture2D" uid="uid://dwdyiqstk6koo" path="res://assets/icons/Home@2x.png" id="2_8xwqa"]
[ext_resource type="Script" path="res://scenes/UI/Stations/Ascend/AscendButton.gd" id="3_82q1k"]

[node name="AscendUI" type="Control"]
z_index = 15
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_krtpo")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Node2D" type="Control" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
script = ExtResource("3_82q1k")

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/HBoxContainer/Node2D"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8xwqa")
expand_mode = 1

[connection signal="status_changed" from="." to="." method="_on_status_changed"]
